// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shinkansen-cogs/cogs/checkbox/field <Field /> With additional props renders 1`] = `
<input
  className="MOCK CLASSNAME"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  onChange={[Function]}
  onClick={[Function]}
  readOnly={true}
  required={true}
  type="checkbox"
  value="MOCK VALUE"
/>
`;

exports[`shinkansen-cogs/cogs/checkbox/field <Field /> With required props renders 1`] = `
<input
  className="MOCK CLASSNAME"
  name="MOCK NAME"
  onChange={[Function]}
  onClick={[Function]}
  type="checkbox"
  value="MOCK VALUE"
/>
`;
